# axum-yew-setup

./: .env
frontend/: Cargo.toml  index.html
frontend/src/: lib.rs  main.rs  routes.rs
frontend/src/components/: about.rs  contact.rs  footer.rs  head.rs  header.rs  tailwind_header.rs
frontend/src/components/auth/: email-list-sign-up.rs  forgot-password.rs  login.rs  new_login.rs  new_register.rs  register.rs
frontend/src/components/generic/: loading.rs
frontend/src/components/generic/error/: no_response.rs  some_error_response.rs
frontend/src/components/generic/success/: some_response.rs
frontend/src/components/requests/: api.rs  email_data.rs  hi.rs  register.rs
frontend/src/elements/: text_input.rs
frontend/src/handlers/: tailwind_html_converter.rs
frontend/src/models/components/: Video.rs  server_request.rs  user.rs
frontend/src/pages/private/: admin.rs  profile.rs  users.rs
frontend/src/pages/public/: about.rs  contact.rs  email.rs  home.rs  login.rs  products.rs  registration.rs  services.rs
frontend/src/public/css/: css.css
server/: .env  Cargo.toml
server/src/: database.rs  lib.rs  main.rs  router.rs
server/src/database/: mod.rs  mongo.rs  postgres.rs
server/src/middleware/: authorization.rs
server/src/routes/: hi.rs  user.rs
server/src/routes/auth/: auth.rs  register.rs
server/src/routes/email/: get_email_list.rs
server/src/services/email/: smtp.rs
server/src/structs/: opt_struct.rs
server/src/structs/auth/: user_struct.rs
server/src/utils/: globals.rs
