[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.2"
clap = { version = "4.0.32", features = ["derive"] }
log = "0.4.17"
tokio = { version = "1.24.1", features = ["full"] }
tower = { version = "0.4.13", features = ["util", "timeout", "load-shed", "limit"] }
tower-http = { version = "0.3.5", features = ["full"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
async-smtp = "0.6.0"
async-std = { version = "1.11", features = ["unstable", "attributes"] }
bcrypt = "0.13"
serde = {version = "1.0", features = ["derive"] }
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
futures = { version = "0.3.4", default-features = false, features = ["async-await"]}
mongodb = "2.3.1"
jsonwebtoken = "8.2.0"
hyper = "0.14.24"
serde_json = "1.0.94"
lazy_static = "1.4.0"
dotenv = "0.15.0"

# [dev-dependencies]
# glob = "^0.3"
# criterion = "^0.3"
# async-std = { version = "1.11", features = ["unstable", "attributes"] }
# tokio = { version = "1", features = ["fs", "rt", "time", "net", "macros"] }
# lazy_static = "1.4.0"
# log = "0.4.17"

